--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
 
     <div class="header">
-        <h3>GitNex</h3>
+        <h3>GitNex Blog</h3>
     </div>
 
     <div class="card-menu">
