--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <div class="column">
 
             <div class="card">
+                <h2>GitNex 3.2.0 released</h2>
+                <h5>Oct 01, 2020 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
+                <p><a href="posts/320.html" class="button">Continue reading</a></p>
+            </div>
+
+            <div class="card">
                 <h2>GitNex 3.1.0 released with multiple accounts support</h2>
                 <h5>Aug 22, 2020 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
                 <p><a href="posts/310.html" class="button">Continue reading</a></p>
