--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="card-menu">
         <p>
-            <a href="https://pages.codeberg.org/gitnex" class="button header-links">Home</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://gitnex.codeberg.page" class="button header-links">Home</a>&nbsp;&nbsp;&nbsp;
             <a href="https://codeberg.org/gitnex/GitNex" class="button header-links">Repository</a>&nbsp;&nbsp;&nbsp;
             <a href="https://codeberg.org/gitnex/GitNex#user-content-downloads" class="button header-links">Download</a>&nbsp;&nbsp;&nbsp;
             <a href="https://codeberg.org/gitnex/GitNex/wiki" class="button header-links">Wiki</a>
@@ -24,6 +24,12 @@
 
     <div class="row">
         <div class="column">
+
+            <div class="card">
+                <h2>GitNex 3.3.0 is out now</h2>
+                <h5>Nov 18, 2020 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
+                <p><a href="posts/330.html" class="button">Continue reading</a></p>
+            </div>
 
             <div class="card">
                 <h2>GitNex 3.2.0 released</h2>
