create blog post for 3.5.0 release

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <div class="column">
 
             <div class="card">
+                <h2>GitNex 3.5.0 is released with biometric auth, new file view renderer, cron tasks for admins</h2>
+                <h5>Mar 21, 2021 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
+                <p><a href="posts/350.html" class="button">Continue reading</a></p>
+            </div>
+
+            <div class="card">
                 <h2>GitNex 3.4.0 is here</h2>
                 <h5>Jan 01, 2021 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
                 <p><a href="posts/340.html" class="button">Continue reading</a></p>
