Add third party link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <div class="column">
 
             <div class="card">
+                <h2>How GitNex was started and what next?</h2>
+                <h5>Sep 18, 2021 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
+                <p><a href="https://appoftheday.downloadastro.com/app/gitnex-for-gitea/" class="button" target="_blank">Read interview of core developer by downloadastro</a></p>
+            </div>
+
+            <div class="card">
                 <h2>GitNex 4.0.0 is released with user profiles</h2>
                 <h5>Aug 16, 2021 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
                 <p><a href="posts/400.html" class="button">Continue reading</a></p>
