--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="column">
 
             <div class="card">
-                <h2>GitNex 4.2.0 is out now</h2>
-                <h5>Feb 28, 2022 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
+                <h2>GitNex 4.2.0 is out</h2>
+                <h5>Feb 27, 2022 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
                 <p><a href="posts/420.html" class="button">Continue reading</a></p>
             </div>
 
