--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <div class="column">
 
             <div class="card">
+                <h2>GitNex got Wiki support in 4.4.0</h2>
+                <h5>July 1, 2022 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
+                <p><a href="posts/440.html" class="button">Continue reading</a></p>
+            </div>
+
+            <div class="card">
                 <h2>GitNex 4.3.0 is here with bunch of features and ui enhancements</h2>
                 <h5>May 16, 2022 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
                 <p><a href="posts/430.html" class="button">Continue reading</a></p>
