--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="icon" type="image/png" href="https://github.com/tahaghafuri/favicon.png"/>
+          <meta charset="utf-8">
+          <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+          <title>Taha Amin Ghafuri - Blog</title>
+          <meta content="Blog - وبلاگ" name="descriptison">
+          <meta content="tahaghafuri,Taha Amin Ghafuri,Taha Ghafuri,طاها غفوری,طاها امین غفوری" name="keywords">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
-
     <body>
-
     <div class="header">
-        <h3>GitNex Blog</h3>
+        <h3>Blog</h3>
     </div>
 
     <div class="card-menu">
         <p>
-            <a href="https://gitnex.codeberg.page" class="button header-links">Home</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://codeberg.org/gitnex/GitNex#gitnex-android-client-for-gitea" class="button header-links" target="_blank">About</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://gitnex.com" class="button header-links" target="_blank">Website</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://codeberg.org/gitnex/GitNex" class="button header-links">Repository</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://codeberg.org/gitnex/GitNex#user-content-downloads" class="button header-links">Download</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://codeberg.org/gitnex/GitNex/wiki" class="button header-links">Wiki</a>
+            <a href="https://github.com/tahaghafuri/" class="button header-links">Home</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/blog/" class="button header-links" target="_blank">Blog</a>&nbsp;&nbsp;&nbsp;
         </p>
     </div>
 
@@ -28,80 +26,12 @@
         <div class="column">
 
             <div class="card">
-                <h2>GitNex 4.5.0 is released with Material You design</h2>
-                <h5>Aug 30, 2022 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/450.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex got Wiki support in 4.4.0</h2>
-                <h5>July 1, 2022 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/440.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex 4.3.0 is here with bunch of features and ui enhancements</h2>
-                <h5>May 16, 2022 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/430.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex 4.2.0 is out</h2>
-                <h5>Feb 27, 2022 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/420.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex 4.1.0 is out with explore users</h2>
-                <h5>Oct 12, 2021 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/410.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>How GitNex was started and what next?</h2>
-                <h5>Sep 18, 2021 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="https://appoftheday.downloadastro.com/app/gitnex-for-gitea/" class="button" target="_blank">Read interview of core developer by downloadastro</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex 4.0.0 is released with user profiles</h2>
-                <h5>Aug 16, 2021 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/400.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex 3.5.0 is released with biometric auth, new file view renderer, cron tasks for admins</h2>
-                <h5>Mar 21, 2021 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/350.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex 3.4.0 is here</h2>
-                <h5>Jan 01, 2021 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/340.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex 3.3.0 is out now</h2>
-                <h5>Nov 18, 2020 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/330.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex 3.2.0 released</h2>
-                <h5>Oct 01, 2020 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/320.html" class="button">Continue reading</a></p>
-            </div>
-
-            <div class="card">
-                <h2>GitNex 3.1.0 released with multiple accounts support</h2>
-                <h5>Aug 22, 2020 by <a href="https://codeberg.org/mmarif" class="link-author">@mmarif</a></h5>
-                <p><a href="posts/310.html" class="button">Continue reading</a></p>
+                <h2>Blog Created!</h2>
+                <h5>Nov 24, 2022 by <a href="https://github.com/tahaghafuri" class="link-author">@tahaghafuri</a></h5>
+                <p><a href="1.html" class="button">Continue reading</a></p>
             </div>
 
         </div>
     </div>
-
     </body>
-
 </html>
