--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-          <link rel="icon" type="image/png" href="https://github.com/tahaghafuri/favicon.png"/>
+          <link rel="icon" type="image/png" href="https://tahaghafuri.ir/favicon.png"/>
           <meta charset="utf-8">
           <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
           <title>Taha Amin Ghafuri - Blog</title>
           <meta content="Blog - وبلاگ" name="descriptison">
           <meta content="tahaghafuri,Taha Amin Ghafuri,Taha Ghafuri,طاها غفوری,طاها امین غفوری" name="keywords">
