--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
           <title>Taha Amin Ghafuri - Blog Created!</title>
           <meta content="My Blog Created!" name="descriptison">
           <meta content="tahaghafuri,Taha Amin Ghafuri,Taha Ghafuri,طاها غفوری,طاها امین غفوری" name="keywords">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="https://tahaghafuri.ir/blog/assets/css/style.css">
     </head>
     <body>
     <div class="header">
@@ -25,7 +25,7 @@
         <div class="column">
 
             <div class="card">
-                <h2>404</h2>
+                <h2>Blog Created!</h2>
                 <h5>Nov 24, 2022 by <a href="https://github.com/tahaghafuri" class="link-author">@tahaghafuri</a></h5>
                 <p>My Blog Created!</p>
             </div>
