--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           <title>Taha Amin Ghafuri - Blog</title>
           <meta content="Blog - وبلاگ" name="descriptison">
           <meta content="tahaghafuri,Taha Amin Ghafuri,Taha Ghafuri,طاها غفوری,طاها امین غفوری" name="keywords">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="https://tahaghafuri.ir/blog/assets/css/style.css">
     </head>
     <body>
     <div class="header">
@@ -27,7 +27,7 @@
             <div class="card">
                 <h2>Blog Created!</h2>
                 <h5>Nov 24, 2022 by <a href="https://github.com/tahaghafuri" class="link-author">@tahaghafuri</a></h5>
-                <p><a href="1.html" class="button">Continue reading</a></p>
+                <p><a href="1" class="button">Continue reading</a></p>
             </div>
 
         </div>
