--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
           <title>Taha Amin Ghafuri - 404</title>
           <meta content="Blog - وبلاگ" name="descriptison">
           <meta content="tahaghafuri,Taha Amin Ghafuri,Taha Ghafuri,طاها غفوری,طاها امین غفوری" name="keywords">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="https://tahaghafuri.ir/blog/assets/css/style.css">
     </head>
     <body>
     <div class="header">
