--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="card-menu">
         <p>
-            <a href="https://github.com/tahaghafuri/" class="button header-links">Home</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/" class="button header-links">Home</a>&nbsp;&nbsp;&nbsp;
             <a href="https://tahaghafuri.ir/blog/" class="button header-links" target="_blank">Blog</a>&nbsp;&nbsp;&nbsp;
         </p>
     </div>
