--- a/404.html
+++ b/404.html
@@ -5,9 +5,8 @@
           <meta charset="utf-8">
           <meta content="width=device-width, initial-scale=1.0" name="viewport">
           <title>Taha Amin Ghafuri - 404</title>
-          <meta content="Blog - وبلاگ" name="descriptison">
-          <meta content="tahaghafuri,Taha Amin Ghafuri,Taha Ghafuri,طاها غفوری,طاها امین غفوری" name="keywords">
-        <link rel="stylesheet" type="text/css" href="https://tahaghafuri.ir/blog/assets/css/style.css">
+          <meta name="robots" content="noindex">
+        <link rel="stylesheet" type="text/css" href="https://tahaghafuri.ir/anylogic/assets/css/style.css">
     </head>
     <body>
     <div class="header">
@@ -17,7 +16,7 @@
     <div class="card-menu">
         <p>
             <a href="https://tahaghafuri.ir/" class="button header-links">Home</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://tahaghafuri.ir/blog/" class="button header-links" target="_blank">Blog</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/anylogic/" class="button header-links" target="_blank">AnyLogic</a>&nbsp;&nbsp;&nbsp;
         </p>
     </div>
 
@@ -26,7 +25,7 @@
 
             <div class="card">
                 <h2>404</h2>
-                <p>Not Found!<br><a href="https://tahaghafuri.ir/blog/" class="button">Go back</a></p>
+                <p>Not Found!<br><a href="https://tahaghafuri.ir/anylogic/" class="button">Go back</a></p>
             </div>
 
         </div>
