--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
           <link rel="icon" type="image/png" href="https://tahaghafuri.ir/favicon.png"/>
           <meta charset="utf-8">
           <meta content="width=device-width, initial-scale=1.0" name="viewport">
-          <title>Taha Amin Ghafuri - Blog</title>
-          <meta content="Blog - وبلاگ" name="descriptison">
+          <title>Taha Amin Ghafuri - AnyLogic</title>
+          <meta content="AnyLogic Simulations By Taha Amin Ghafuri" name="descriptison">
           <meta content="tahaghafuri,Taha Amin Ghafuri,Taha Ghafuri,طاها غفوری,طاها امین غفوری" name="keywords">
         <link rel="stylesheet" type="text/css" href="https://tahaghafuri.ir/blog/assets/css/style.css">
     </head>
     <body>
     <div class="header">
-        <h3>Blog</h3>
+        <h3>AnyLogic</h3>
     </div>
 
     <div class="card-menu">
         <p>
             <a href="https://tahaghafuri.ir/" class="button header-links">Home</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://tahaghafuri.ir/blog/" class="button header-links" target="_blank">Blog</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/blog/" class="button header-links">Blog</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#about" class="button header-links">About</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/anylogic/" class="button header-links">AnyLogic</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#education" class="button header-links">Education</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#skills" class="button header-links">Skills</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#old" class="button header-links">Old Activity</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://jobinja.ir/user/QH-6123241" class="button header-links">Resume</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#contacts" class="button header-links">Contact</a>&nbsp;&nbsp;&nbsp;
         </p>
     </div>
 
@@ -25,9 +32,18 @@
         <div class="column">
 
             <div class="card">
-                <h2>Blog Created!</h2>
-                <h5>Nov 24, 2022 by <a href="https://github.com/tahaghafuri" class="link-author">@tahaghafuri</a></h5>
-                <p><a href="1" class="button">Continue reading</a></p>
+                <h2>Simulations</h2>
+                <h5>Jan 1, 2023 by <a href="https://github.com/tahaghafuri" class="link-author">@tahaghafuri</a></h5>
+                <p>
+                <iframe width="1000" height="650" allow="fullscreen" src="https://cloud.anylogic.com/assets/embed?modelId=d8285e96-ba9e-44bd-a511-b8dff1ea342e"></iframe>
+                <iframe width="1000" height="650" allow="fullscreen" src="https://cloud.anylogic.com/assets/embed?modelId=4f3316e2-3d61-4def-916e-125290467cfa"></iframe>
+                <iframe width="1000" height="650" allow="fullscreen" src="https://cloud.anylogic.com/assets/embed?modelId=bef04e19-b989-4df0-9b96-d39511de2564"></iframe>
+                <iframe width="1000" height="650" allow="fullscreen" src="https://cloud.anylogic.com/assets/embed?modelId=8bb44624-35ec-44e0-b21f-f23de319e360"></iframe>
+                <iframe width="1000" height="650" allow="fullscreen" src="https://cloud.anylogic.com/assets/embed?modelId=13e55a94-f1bc-4719-8000-c9e15961a079"></iframe>
+                <iframe width="1000" height="650" allow="fullscreen" src="https://cloud.anylogic.com/assets/embed?modelId=d5a2197d-84ba-44b3-852c-fff04b70911e"></iframe>
+                <iframe width="1000" height="650" allow="fullscreen" src="https://cloud.anylogic.com/assets/embed?modelId=86a2acfc-43c5-4027-8df7-3e36c0f96e42"></iframe>
+                <iframe width="1000" height="650" allow="fullscreen" src="https://cloud.anylogic.com/assets/embed?modelId=9d18002b-7d83-4281-8b6c-4fb4bd712c19"></iframe>
+                </p>
             </div>
 
         </div>
