--- a/404.html
+++ b/404.html
@@ -10,13 +10,20 @@
     </head>
     <body>
     <div class="header">
-        <h3>Blog</h3>
+        <h3>AnyLogic</h3>
     </div>
 
     <div class="card-menu">
         <p>
             <a href="https://tahaghafuri.ir/" class="button header-links">Home</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://tahaghafuri.ir/anylogic/" class="button header-links" target="_blank">AnyLogic</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/blog/" class="button header-links">Blog</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#about" class="button header-links">About</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/anylogic/" class="button header-links">AnyLogic</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#education" class="button header-links">Education</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#skills" class="button header-links">Skills</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#old" class="button header-links">Old Activity</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://jobinja.ir/user/QH-6123241" class="button header-links">Resume</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://tahaghafuri.ir/#contacts" class="button header-links">Contact</a>&nbsp;&nbsp;&nbsp;
         </p>
     </div>
 
