--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
           <meta charset="utf-8">
           <meta content="width=device-width, initial-scale=1.0" name="viewport">
           <title>Taha Amin Ghafuri - 404</title>
-          <meta name="robots" content="noindex">
+          <meta name="robots" content="noindex,nofollow">
         <link rel="stylesheet" type="text/css" href="https://tahaghafuri.ir/anylogic/assets/css/style.css">
     </head>
     <body>
